--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: devlopr
-subtitle: A Jekyll Theme Built for Developers
+title: Gustavo Salibi
+subtitle: Developer
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a Jekyll Theme Built For Developers
 
@@ -25,12 +25,12 @@ urls:
 # Edit these details
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "johndoe@gmail.com"
-author_location: India
-author_website_url: "http://johndoe.com"
-typewrite-text: devlopr is a jekyll theme built for developers. You can edit this in _config.yml file
+author: Gustavo  Salibi
+author_bio: Hi, my name is Gustavo  Salibi. I built this site using devlopr-jekyll :D
+author_email: "gustavo.salibi@gmail.com"
+author_location: Brazil
+author_website_url: "http://gsalibi.gitthub.io"
+typewrite-text: Developer.
 
 author_work_experiences:
             - company_name: Google
@@ -67,16 +67,16 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  sujaykundu777
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username: gsalibi
+github_username:  gsalibi
+facebook_username: gsalibi
+linkedin_username: gsalibi
+behance_username: gsalibi
+instagram_username: gsalibi
+medium_username: gsalibi
+telegram_username: gsalibi
+dribbble_username: gsalibi
+flickr_username: gsalibi
 
 #for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
 
