--- a/_config.yml
+++ b/_config.yml
@@ -7,20 +7,18 @@ url: "" # the base hostname & protocol for your site, e.g. https://example.githu
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
-    - text: About Me
-      url: /about
-    - text: Blog
-      url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
-    - text: Contact Me
-      url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
+  - text: About Me
+    url: /about
+  - text: Blog
+    url: /blog
+  - text: Gallery
+    url: /gallery
+  - text: Contact Me
+    url: /contact
+  - text: Styleguide
+    url: /styleguide
+  - text: Get Started
+    url: /get-started
 
 # Edit these details
 
@@ -33,42 +31,42 @@ author_website_url: "http://gsalibi.gitthub.io"
 typewrite-text: Developer.
 
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
-              visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
-              visibility: true
+  - company_name: Google
+    company_logo: google.png
+    company_url: https://google.com
+    designation: Software Engineer
+    description: Worked on various Google Products
+    visibility: true
+  - company_name: Microsoft
+    company_logo: microsoft.png
+    company_url: https://microsoft.com
+    designation: Azure Developer
+    description: Worked on various Azure Cloud Products
+    visibility: true
 
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
-                visibility: true
+  - college_logo: mit.png
+    college_name: MIT
+    college_url: https://mit.org
+    college_degree: CS Engineer
+    description: Bachelor of Technology
+    visibility: true
 
 author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
-                visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
-                visibility: true
+  - project_thumbnail: gamershub.png
+    project_title: Gamers Hub
+    project_description: A Platform built for Gamers and Game Devs
+    project_url: https://gamershub.in
+    visibility: true
+  - project_thumbnail: hack4r.PNG
+    project_title: Hack4r
+    project_description: A Platform built for Hackers and Penetration Testers
+    project_url: https://hack4r.com
+    visibility: true
 
 # social links
 twitter_username: gsalibi
-github_username:  gsalibi
+github_username: gsalibi
 facebook_username: gsalibi
 linkedin_username: gsalibi
 behance_username: gsalibi
@@ -107,7 +105,7 @@ algolia:
   application_id: D9WA1YKTRQ
   index_name: blog_posts # You can replace that with whatever name you want
   files_to_exclude: []
-  nodes_to_index: 'article'
+  nodes_to_index: "article"
   search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
 
 # pagination of posts
@@ -131,14 +129,9 @@ paginate_path: "/blog/page/:num/"
 #   permalinks:
 #     category: '/category/:name/'
 
-# Shop
-collections:
- - products
-
 # Gallery
 defaults:
-  -
-    scope:
+  - scope:
       path: "gallery"
     values:
       permalink: /:path/:basename:output_ext
@@ -152,7 +145,6 @@ plugins:
   - jekyll-sitemap
   - jekyll-algolia
   - jekyll-menus
-
 
 # Exclude from processing.
 # The following items will not be processed, by default.
