--- a/_config.yml
+++ b/_config.yml
@@ -70,9 +70,7 @@ telegram_username: gsalibi
 dribbble_username: gsalibi
 flickr_username: gsalibi
 
-#for comments ( we got Disqus and Hyvor Commenting, uncomment the one you want to use )
-
-# disqus_shortname: sujay-kundu
+#for comments
 hyvor_talk_website_id: 476
 
 # wakatime username (coding activity)
