--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Gustavo Salibi
 subtitle: Developer
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a Jekyll Theme Built For Developers
+  Gustavo Salibi's personal web page and blog.
 
 url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
