Hide code activity

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ telegram_username: gsalibi
 hyvor_talk_website_id: 740
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+#wakatime_username: sujaykundu777
 
 # formspree (contact form)
 formspree_email: gustavo.salibi@gmail.com
