Update bio and contact

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ urls:
 
 author_logo: profile.png
 author: Gustavo  Salibi
-author_bio: My full name is Gustavo Henrique Storti Salibi. I am currently a student of computer science at the <a href="https://www.unicamp.br/unicamp/english" target="_blank">University of Campinas (Unicamp)</a> and intern at the <a href="https://developeracademy.eldorado.org.br/campinas/" target="_blank">Apple Developer Academy</a>.
+author_bio: My full name is Gustavo Henrique Storti Salibi (I know, it's a long name). I am currently a student of computer science at the <a href="https://www.unicamp.br/unicamp/english" target="_blank">University of Campinas (Unicamp)</a> and intern at the <a href="https://developeracademy.eldorado.org.br/campinas/" target="_blank">Apple Developer Academy</a>.
 #author_email: "gustavo.salibi@gmail.com"
 author_location: Brazil
 #author_website_url: "http://gsalibi.github.io"
