--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ subtitle: Developer
 description: >- # this means to ignore newlines until "baseurl:"
   Gustavo Salibi's personal web page and blog.
 
-url: "https://www.salibi.dev" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://salibi.dev" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
