--- a/_config.yml
+++ b/_config.yml
@@ -100,11 +100,11 @@ show_author_project_details: false
 
 # algolia search
 algolia:
-  application_id: D9WA1YKTRQ
+  application_id: A8PDDGBHUR
   index_name: blog_posts # You can replace that with whatever name you want
   files_to_exclude: []
   nodes_to_index: "article"
-  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
+  search_only_api_key: 6d39c09cd3edae02fd86db8848103c96
 
 # pagination of posts
 paginate: 4
