Change id do remove bad search results

--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ show_author_project_details: false
 
 # algolia search
 algolia:
-  application_id: A8PDDGBHUR
+  application_id: 0000000000 #A8PDDGBHUR
   index_name: blog_posts # You can replace that with whatever name you want
   files_to_exclude: []
   nodes_to_index: "article"
