--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -11,6 +11,11 @@ sections:
   label: Posts
   create: documents
   new_doc_ext: md
+- type: directory
+  path: _projects
+  label: Projects
+  create: all
+  match: "**/*"
 upload_dir: uploads
 public_path: "/uploads"
 front_matter_path: ''
