--- a/_config.yml
+++ b/_config.yml
@@ -116,6 +116,9 @@ paginate: 4
 per_page: 4
 paginate_path: "/blog/page/:num/"
 
+kramdown:
+  parse_block_html: true
+
 # minify
 # compress_html:
 #   clippings: all
